infrastructure/configs/openbao/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "bao.athanor.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier: # literally modify the header of the HTTPS request
            add:
              - name: X-Forwarded-Proto # awaring openbao that the connection is secure (HTTPS)
                value: https # avoding an "infinite redirect loop" issue
      backendRefs:
        - name: openbao-server # This must match your OpenBao Service name
          port: 8200
